remove existing interceptors before adding. dep updates. fixed broken style file (format changed in a recent update)

--- a/frontend/src/assets/theme/styleoverrides.scss
+++ b/frontend/src/assets/theme/styleoverrides.scss
@@ -14,13 +14,6 @@
    button.p-button {
       white-space: nowrap
    }
-   button.p-button-link {
-      margin: 0;
-      padding: 2px 10px;
-      &:hover {
-         text-decoration: underline;
-      }
-   }
    a.p-button.p-component {
       &:hover {
          text-decoration: none;
@@ -44,16 +37,16 @@ div.p-fieldset-content {
    gap: 10px;
 }
 
-div.p-select-overlay.p-component {
-   background: white;
-   padding: 0;
-   border: 1px solid $uva-grey-100;
-   border-radius: 0.3rem;
-   .p-select-option.p-select-option-selected, .p-select-option.p-select-option-selected.focus {
-      background: $uva-blue-alt-300;
-      color: $uva-text-color-dark;
-   }
-}
+// div.p-select-overlay.p-component {
+//    background: white;
+//    padding: 0;
+//    border: 1px solid $uva-grey-100;
+//    border-radius: 0.3rem;
+//    .p-select-option.p-select-option-selected, .p-select-option.p-select-option-selected.focus {
+//       background: $uva-blue-alt-300;
+//       color: $uva-text-color-dark;
+//    }
+// }
 
 .p-dialog-mask {
    .p-dialog {
